IE Fixes: make IE not error when selecting "None" color, hide overflow on toolbar buttons
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@6223 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_whiteboard.scss
+++ b/src/main/resources/scss/_whiteboard.scss
@@ -28,6 +28,9 @@ a.color-none {
 .whiteboard-toolbar {
     .x-btn {
         button{
+            .x-ie & {
+            	overflow: hidden;
+            }
 			.x-btn-inner {
 				padding-left: 30px !important;
 			}
